--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="initial-scale=1.0, width=device-width" />
     <meta charset="UTF-8">
     <meta http-equiv="Content-Language" content="en">
+    <link rel="icon" href="favicon.ico" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/app.css" />
   </head>
   <body><div id="app"></div></body>
-  <script src="web3.min.js"></script>
+  <script src="vendor/web3.min.js"></script>
   <script crossorigin src="vendor.js"></script>
   <script crossorigin src="app.js"></script>
 </html>
