Mammoth UI Cleanup. LinkedIn certifier. Identity URLs.

--- a/public/dev.html
+++ b/public/dev.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/font-awesome.min.css" />
   </head>
-  <body><div id="app"></div></body>
+  <body><div id="app"><div class="p-3">Please wait...</div></div></body>
   <script src="vendor/web3.min.js"></script>
   <script crossorigin src="{HOST}vendor.js"></script>
   <script crossorigin src="{HOST}app.js"></script>
