--- a/public/dev.html
+++ b/public/dev.html
@@ -10,6 +10,12 @@
   </head>
   <body><div id="app"><div class="p-3">Please wait...</div></div></body>
   <script src="vendor/web3.min.js"></script>
+  <script crossorigin src="vendor/openpgp.min.js"></script>
+  <script>
+    openpgp.config.show_comment = false
+    openpgp.config.show_version = false
+    openpgp.initWorker({ path: 'vendor/openpgp.worker.min.js' })
+  </script>
   <script crossorigin src="{HOST}vendor.js"></script>
   <script crossorigin src="{HOST}app.js"></script>
 </html>
