--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="Content-Language" content="en">
     <link rel="icon" href="favicon.ico" />
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/font-awesome.min.css" />
+    <link rel="stylesheet" href="css/blueprint.css" />
     <link rel="stylesheet" href="css/app.css" />
   </head>
-  <body><div id="app"></div></body>
-  <script src="vendor/web3.min.js"></script>
+  <body><div id="app"><div class="p-3">Please wait...</div></div></body>
+  <script src="vendor/web3.js"></script>
   <script crossorigin src="vendor/openpgp.min.js"></script>
   <script>
     openpgp.config.show_comment = false
