--- a/public/dev.html
+++ b/public/dev.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/blueprint.css" />
   </head>
   <body><div id="app"><div class="p-3">Please wait...</div></div></body>
-  <script src="vendor/web3.min.js"></script>
+  <script src="vendor/web3.js"></script>
   <script crossorigin src="vendor/openpgp.min.js"></script>
   <script>
     openpgp.config.show_comment = false
